# SentinelMCP

./: CLAUDE.md  Dockerfile  Makefile  README.md  mcpize.yaml  pyproject.toml
src/SentinelMCP/: server.py  tools.py
tests/: test_tools.py
